--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-    <div class="row">
-        <%- model_class = Project -%>
-        <div class="page-header">
-            <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
-        </div>
+  <div class="row">
+    <div class="col-md-12">
+      <%- model_class = Project -%>
         <%= render :partial => 'form' %>
+      </div>
+
     </div>
-</div>
+  </div>
