--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,21 @@
         <ul class="navbar-nav ml-auto">
           <% if current_user %>
             <li class="nav-item">
+              <a class="nav-link" href="#">Overview</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Details</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Timesheet</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Schedule</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Preferences</a>
+            </li>
+            <li class="nav-item">
               <img src="https://via.placeholder.com/45x45" alt="profile-pic" class="rounded-circle"></li>
 
             <li class="nav-item dropdown">
